// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML Snapshot Rendered templates 1`] = `
"{{! DEVELOPER NOTE: This template uses triple-bracket \\"{{{\\"
    which disables HTML escaping.
    Please ensure these variables are properly escaped:
     - legend,
     - hint,
     - error,
     - children.
    The reason for this is to allow raw HTML, for values such as (eg) '<span lang=\\"mi\\">Māori</span>'. }}

<div
class=\\"g-fieldsetBlock-form-group{{#errorId}} g-fieldsetBlock-form-group--error{{/errorId}}\\"
>
  
  
<fieldset
aria-describedby=\\"{{hintId}} {{errorId}}\\"
class=\\"g-fieldset\\"
>
  
    
<legend
class=\\"g-fieldset__legend\\"
>
  
      
  {{{legend}}}
  
    
</legend>
  
    
  
      
<div
class=\\"g-fieldsetBlock-hint\\"
{{#hintId}}
  id=\\"{{hintId}}\\"
{{/hintId}}
>
  
        
  {{{hint}}}
  
      
</div>
  
    
  
    
  
      
<div
class=\\"g-fieldsetBlock-error-message\\"
{{#errorId}}
  id=\\"{{errorId}}\\"
{{/errorId}}
>
  
        
<span
class=\\"g-fieldsetBlock-visually-hidden\\"
>
  
          Error:
        
</span>
  
        
  {{{error}}}
  
      
</div>
  
    
  
    
<div
>
  {{{children}}}
</div>
  
  
</fieldset>
  

</div>"
`;

exports[`HTML Snapshot Rendered templates 2`] = `
"{{! DEVELOPER NOTE: This template uses triple-bracket \\"{{{\\"
    which disables HTML escaping.
    Please ensure these variables are properly escaped:
     - children.
    The reason for this is to allow raw HTML, for values such as (eg) '<span lang=\\"mi\\">Māori</span>'. }}

<h1
class=\\"{{#styleSize=xlarge}} g-heading-xl{{/styleSize=xlarge}}{{#styleSize=large}} g-heading-l{{/styleSize=large}}{{#styleSize=medium}} g-heading-m{{/styleSize=medium}}{{#styleSize=small}} g-heading-s{{/styleSize=small}}{{#styleSize=xsmall}} g-heading-xs{{/styleSize=xsmall}}{{#styleSize=xxsmall}} g-heading-xxs{{/styleSize=xxsmall}} {{#marginBottom8}} g-heading-mb-8{{/marginBottom8}} {{#marginBottom0}} g-heading-mb-0{{/marginBottom0}}\\"
{{#id}}
  id=\\"{{id}}\\"
{{/id}}
>
  
  
  {{{children}}}
  

</h1>"
`;

exports[`HTML Snapshot Rendered templates 3`] = `
"{{! DEVELOPER NOTE: This template uses triple-bracket \\"{{{\\"
    which disables HTML escaping.
    Please ensure these variables are properly escaped:
     - children.
    The reason for this is to allow raw HTML, for values such as (eg) '<span lang=\\"mi\\">Māori</span>'. }}

<div
class=\\"g-radios{{#inline}} g-radios--inline{{/inline}}\\"
>
  
  
  {{{children}}}
  

</div>"
`;

exports[`HTML Snapshot Rendered templates 4`] = `
"{{! DEVELOPER NOTE: This template uses triple-bracket \\"{{{\\"
    which disables HTML escaping.
    Please ensure these variables are properly escaped:
     - label,
     - hint.
    The reason for this is to allow raw HTML, for values such as (eg) '<span lang=\\"mi\\">Māori</span>'. }}

<div
class=\\"g-radios__item\\"
>
  
  
<input
{{#hintId}}
  aria-describedby=\\"{{hintId}}\\"
{{/hintId}}
class=\\"g-radios__input\\"
{{#radioId}}
  id=\\"{{radioId}}\\"
{{/radioId}}
{{#name}}
  name=\\"{{name}}\\"
{{/name}}
type=\\"radio\\"
{{#disabled}}
  disabled=\\"{{#disabled}}disabled{{/disabled}}\\"
{{/disabled}}
{{#readOnly}}
  readonly=\\"{{#readOnly}}readOnly{{/readOnly}}\\"
{{/readOnly}}
{{#autoFocus}}
  autofocus=\\"{{#autoFocus}}autoFocus{{/autoFocus}}\\"
{{/autoFocus}}
{{#value}}
  value=\\"{{value}}\\"
{{/value}}
{{#checked}}
  checked=\\"{{#checked}}checked{{/checked}}\\"
{{/checked}}
/>
  
  
<label
class=\\"g-radioBlock-label g-radios__label\\"
{{#radioId}}
  for=\\"{{radioId}}\\"
{{/radioId}}
>
  
    
  {{{label}}}
  
  
</label>
  
  
  
    
<div
class=\\"g-radioBlock-hint g-checkboxes__hint\\"
{{#hintId}}
  id=\\"{{hintId}}\\"
{{/hintId}}
>
  
      
  {{{hint}}}
  
    
</div>
  
  
  

</div>"
`;

exports[`HTML Snapshot Simple global rules 1`] = `
"<div class=\\"g-fieldsetBlock-form-group g-fieldsetBlock-form-group--error\\">
  <fieldset aria-describedby=\\"hintId5 errorId5\\" class=\\"g-fieldset\\">
    <legend class=\\"g-fieldset__legend\\">
      <h1 class=\\" g-heading-l  \\" id=\\"nameChangeId5\\">
        Have you changed your name?
      </h1>
    </legend>

    <div class=\\"g-fieldsetBlock-hint\\" id=\\"hintId5\\">
      <p>
        This includes changing your last name or spelling your name differently.
      </p>
    </div>

    <div class=\\"g-fieldsetBlock-error-message\\" id=\\"errorId5\\">
      <span class=\\"g-fieldsetBlock-visually-hidden\\">
        Error:
      </span>

      Select 'yes' if you have changed your name.
    </div>

    <div>
      <div class=\\"g-radios g-radios--inline\\">
        <div class=\\"g-radios__item\\">
          <input
            aria-describedby=\\"hintId5\\"
            class=\\"g-radios__input\\"
            id=\\"anyRadioId9234\\"
            name=\\"nameChange5\\"
            type=\\"radio\\"
            value=\\"true\\"
          />

          <label
            class=\\"g-radioBlock-label g-radios__label\\"
            for=\\"anyRadioId9234\\"
          >
            Yes
          </label>

          <div class=\\"g-radioBlock-hint g-checkboxes__hint\\" id=\\"hintId5\\"></div>
        </div>
        <div class=\\"g-radios__item\\">
          <input
            aria-describedby=\\"hintId5\\"
            class=\\"g-radios__input\\"
            id=\\"anyRadioId10\\"
            name=\\"nameChange5\\"
            type=\\"radio\\"
            value=\\"false\\"
          />

          <label class=\\"g-radioBlock-label g-radios__label\\" for=\\"anyRadioId10\\">
            No
          </label>

          <div class=\\"g-radioBlock-hint g-checkboxes__hint\\" id=\\"hintId5\\"></div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
"
`;
